RESOLVED FIXED300949
REGRESSION(301011@main): YouTube vidoes start black, or are black after an ad
https://bugs.webkit.org/show_bug.cgi?id=300949
Summary REGRESSION(301011@main): YouTube vidoes start black, or are black after an ad
Jean-Yves Avenard [:jya]
Reported 2025-10-16 18:30:06 PDT
was watching this YouTube video: https://www.youtube.com/watch?v=eou_g_cYCew When the video started to play after skipping ads at the start, the video showed black (but audio was playing). A window resize fixed it. Also, after every interstitial ad, after hitting the Skip button, the main video started playing black, and again a window resize fixed it. rdar://162654138
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-10-16 18:41:11 PDT
EWS
Comment 2 2025-10-17 14:00:22 PDT
Committed 301743@main (9cc81c236089): <https://commits.webkit.org/301743@main> Reviewed commits have been landed. Closing PR #52528 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.