Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm
@@ -171,7 +171,7 @@ MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(MediaPlayer* player)
         }
     });
 
-    m_renderer->acceleratedRenderingStateChanged(player->renderingCanBeAccelerated());
+    m_renderer->renderingCanBeAcceleratedChanged(player->renderingCanBeAccelerated());
 
 #if HAVE(SPATIAL_TRACKING_LABEL)
     m_defaultSpatialTrackingLabel = player->defaultSpatialTrackingLabel();
@@ -840,7 +840,7 @@ void MediaPlayerPrivateWebM::setPresentationSize(const IntSize& newSize)
 void MediaPlayerPrivateWebM::acceleratedRenderingStateChanged()
 {
     RefPtr player = m_player.get();
-    m_renderer->acceleratedRenderingStateChanged(player ? player->renderingCanBeAccelerated() : false);
+    m_renderer->renderingCanBeAcceleratedChanged(player ? player->renderingCanBeAccelerated() : false);
 }
 
 RetainPtr<PlatformLayer> MediaPlayerPrivateWebM::createVideoFullscreenLayer()
