Source/WebKit/WebProcess/GPU/media/AudioVideoRendererRemote.h
@@ -113,7 +113,7 @@ private:
     void setIsVisible(bool) final;
     void setPresentationSize(const WebCore::IntSize&) final;
     void setShouldMaintainAspectRatio(bool) final;
-    void acceleratedRenderingStateChanged(bool) final;
+    void renderingCanBeAcceleratedChanged(bool) final;
     void contentBoxRectChanged(const WebCore::LayoutRect&) final;
     void notifyFirstFrameAvailable(Function<void()>&&) final;
     void notifyWhenHasAvailableVideoFrame(Function<void(const MediaTime&, double)>&&) final;
